--- a/src/Component/NavBar/NavBar.scss
+++ b/src/Component/NavBar/NavBar.scss
@@ -3,16 +3,12 @@
     height: 12vh;
     background-color: rgb(247, 194, 203);
     align-items: center;
-    // padding-top: 2rem;
 
     .product{
         width: 100%;
         height: 8vh;
         display: flex;
-        // align-items: center;
         justify-content: space-around;
-        // border: 1px solid;
-        // cursor: pointer;
        
     &-logo{
         width: 15%;
@@ -25,7 +21,6 @@
         display: flex;
         align-items: center;
         justify-content: space-evenly;
-        // border: 1px solid;
         cursor: pointer;
         text-transform: capitalize;
         font-size: 2rem;
@@ -37,7 +32,7 @@
     }
   }
 }
-@media (max-width: 768px) {
+
     @media (max-width: 768px) {
         .container{
         height: 10vh;
@@ -52,15 +47,31 @@
     
           &-list {
             height: 5vh;
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             padding-top: 0.8rem;
           }
         }
     }
 }
     
-}
 
 @media (max-width: 480px) {
-   
+  .container{
+    height: 8vh;
+
+    .product {
+      flex-direction: row;
+
+      &-logo {
+        width: 20%;
+        padding-top: 0.1rem;
+      }
+
+      &-list {
+        height: 5vh;
+        font-size: 0.7rem;
+        padding-top: 0.8rem;
+      }
+    }
+}
 }
